@@ -26,9 +26,9 @@
 email: bartj@hum.ku.dk
 */
 
-#define DATUM "26 September 2023"
-#define VERSION "6.19.1"
-#define BUILD "289"
+#define DATUM "27 September 2023"
+#define VERSION "6.19.2"
+#define BUILD "290"
 /*
 COMPILATION
 -----------
@@ -2611,9 +2611,9 @@ static int numbercheck(const char* begin)
     const char* savebegin = begin;
     if(!*begin)
         return 0;
-    op_or_0 = strspn(begin, "0123456789.-+/eEpPxX");
+    op_or_0 = strspn(begin, "0123456789.-+/aAbBcCdDeEfFpPxX");
     if(begin[op_or_0])
-        return 0;
+        return DEFINITELYNONUMBER;
     check = QNUMBER;
     op_or_0 = *begin;
 
@@ -2631,7 +2631,7 @@ static int numbercheck(const char* begin)
                 /* hexadecimal number, must be in domain of strtod */
                 double testdouble = strtod(begin, &endptr);
                 if(*endptr)
-                    return 0; /* format error */
+                    return DEFINITELYNONUMBER; /* format error */
                 if(testdouble == 0.0)
                     check |= QNUL;
                 /* Since doubles can be serialised to hex strings without
